# heterogenous-mobile-computing

./: .editorconfig  .gitignore  .gitlab-ci.yml  .guix-channel  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  EXTENDED_AUTONOMOUS_SUMMARY.md  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  PROJECT_SUMMARY.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.md  RSR_COMPLIANCE.adoc  SECURITY.md  SESSION_CONTINUATION_SUMMARY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  claude.md  codemeta.json  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh
.github/workflows/: boj-build.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  dogfood-gate.yml  generator-generic-ossf-slsa3-publish.yml  guix-nix-policy.yml  hypatia-scan.yml  mirror.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  rust.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  wellknown-enforcement.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
benches/: mlp_bench.rs  orchestrator_bench.rs  reservoir_bench.rs
contractiles/dust/: Dustfile.a2ml
contractiles/lust/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  compliance-checklist.md  tech-debt-2026-05-26.md
examples/: basic_usage.rs  mlp_router.rs  reservoir_demo.rs
fuzz/: Cargo.toml
src/: context.rs  expert.rs  lib.rs  main.rs  mlp.rs  orchestrator.rs  persistence.rs  reservoir.rs  router.rs  sensor.rs  snn.rs  training.rs  types.rs
tests/: smoke_test.rs
